--- a/templates/base.html
+++ b/templates/base.html
@@ -13,11 +13,9 @@
 
 	<body class="bg-gray-50 font-serif leading-normal tracking-normal">
 		<div class="container mx-auto">
-            
+            {% include "core/components/header.html" %}
              {% block content %} {% endblock content %}
-			<section class="flex items-center justify-center h-screen">
-				<h1 class="text-5xl">Django + Tailwind = ❤️</h1>
-			</section>
+			
 		</div>
     <script src="{% static 'js/htmx.min.js' %}"></script>
     {% block extrascript %} {% endblock extrascript %}
