--- a/templates/base.html
+++ b/templates/base.html
@@ -20,7 +20,7 @@
 		<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
 		<!-- Bulma Version 0.9.0-->
 		<link rel="stylesheet" href="https://unpkg.com/bulma@0.9.0/css/bulma.min.css" />
-		<link rel="stylesheet" type="text/css" href="{% static 'css/forum.css' %}">
+		<link rel="stylesheet" type="text/css" href="{% static 'css/mystyle.css' %}">
         {% block extrahead %} {% endblock extrahead %}
 	</head>
 	<body>
