fix font awesome

--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>{% block tajuk %} abuzahrah2022 {% endblock tajuk %}</title>
 		<link rel="shortcut icon" href="{% static 'favicon.ico' %}" type="image/x-icon">
-		<link rel="stylesheet" href="{% static 'css/fontawesome.min.css' %}">
+		{% comment %} <link rel="stylesheet" href="{% static 'css/fontawesome.min.css' %}"> {% endcomment %}
+        <script src="https://kit.fontawesome.com/eafd793930.js" crossorigin="anonymous"></script>
 		<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
 		<!-- Bulma Version 0.9.0-->
 		<link rel="stylesheet" href="https://unpkg.com/bulma@0.9.0/css/bulma.min.css" />
