--- a/templates/base.html
+++ b/templates/base.html
@@ -5,10 +5,9 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
+    {% include "core/components/meta.html" %}
 
-  <title>Dashboard - NiceAdmin Bootstrap Template</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
+  
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
